# localwhisper

./: .gitignore  CLAUDE.md
docs/: PRD-Speech-to-Text.md
localwhisper/: .gitignore  README.md  __init__.py  __main__.py  app.py  pyproject.toml  requirements.txt
localwhisper/core/: __init__.py  audio_engine.py  audio_feedback.py  config.py  history_manager.py  hotkey_manager.py  text_injector.py  transcription_engine.py
localwhisper/tests/: __init__.py  conftest.py  test_config.py  test_history_manager.py  test_hotkey_manager.py
localwhisper/ui/: __init__.py  history_window.py  settings_window.py  tray_icon.py  waveform_widget.py
